--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     android:orientation="vertical"
     android:background="#250505"
     tools:context=".MainActivity">
@@ -17,6 +18,7 @@
         android:layout_marginTop="48dp"
         android:text="@string/sexybomber"
         android:textAppearance="@style/sexybomber"
+        android:fontFamily="@font/hexaframecf"
         android:gravity="top"
         />
     <TextView
@@ -28,6 +30,7 @@
         android:layout_marginTop="37dp"
         android:text="@string/developers_"
         android:textAppearance="@style/developers_"
+        android:fontFamily="@font/hexaframecf"
         android:lineSpacingExtra="7sp"
         android:translationY="-3.6sp"
         android:gravity="center_horizontal|top"
@@ -39,9 +42,10 @@
             android:layout_alignParentLeft="true"
             android:layout_marginLeft="69dp"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="40dp"
             android:text="@string/mobile_numb"
             android:textAppearance="@style/mobile_numb"
+            android:fontFamily="@font/hexaframecf"
             android:lineSpacingExtra="8sp"
             android:translationY="-3.84sp"
             android:gravity="center_horizontal|top"
@@ -66,6 +70,7 @@
         android:layout_marginTop="21dp"
         android:text="@string/amount"
         android:textAppearance="@style/amount"
+        android:fontFamily="@font/hexaframecf"
         android:lineSpacingExtra="8sp"
         android:translationY="-3.84sp"
         android:gravity="center_horizontal"
@@ -88,8 +93,10 @@
         android:layout_marginLeft="89dp"
         android:layout_alignParentTop="true"
         android:layout_marginTop="76dp"
-        android:text="Attack"
+        android:text="ATTACK"
+        android:fontFamily="@font/hexaframecf"
         android:textAlignment="center"
+
         android:textColor="@android:color/white"
         android:textSize="25dp"
         android:background="@drawable/rectangle_3"
