--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,20 +36,35 @@
         android:gravity="center_horizontal|top"
         />
 
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="54dp"
+        android:layout_marginTop="40dp"
+        >
+        <ImageButton
+            android:layout_width="8.58dp"
+            android:layout_height="15.02dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:background="#00000000"
+            android:src="@drawable/number"
+            />
         <TextView
+
             android:layout_width="149.15dp"
             android:layout_height="25.57dp"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="69dp"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="40dp"
+            android:fontFamily="@font/hexaframecf"
+            android:gravity="center"
+            android:lineSpacingExtra="8sp"
             android:text="@string/mobile_numb"
             android:textAppearance="@style/mobile_numb"
-            android:fontFamily="@font/hexaframecf"
-            android:lineSpacingExtra="8sp"
-            android:translationY="-3.84sp"
-            android:gravity="center_horizontal|top"
-            />
+            android:translationY="-3.84sp" />
+    </LinearLayout>
+
 
     <EditText
         android:id="@+id/text1"
@@ -61,20 +76,35 @@
 
         android:background="@drawable/rectangle_1"
         />
-    <TextView
-        android:layout_width="75.64dp"
-        android:layout_height="25.57dp"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="69dp"
-        android:layout_alignParentTop="true"
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:layout_marginTop="21dp"
-        android:text="@string/amount"
-        android:textAppearance="@style/amount"
-        android:fontFamily="@font/hexaframecf"
-        android:lineSpacingExtra="8sp"
-        android:translationY="-3.84sp"
-        android:gravity="center_horizontal"
-        />
+        android:layout_marginLeft="54dp">
+        <ImageButton
+            android:layout_width="8.58dp"
+            android:layout_height="15.02dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:background="#00000000"
+            android:src="@drawable/amount"
+            />
+
+        <TextView
+            android:layout_width="75.64dp"
+            android:layout_height="25.57dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
+            android:text="@string/amount"
+            android:textAppearance="@style/amount"
+            android:fontFamily="@font/hexaframecf"
+            android:lineSpacingExtra="8sp"
+            android:translationY="-3.84sp"
+            android:gravity="center"
+            />
+    </LinearLayout>
+
 
     <EditText
         android:id="@+id/text2"
@@ -85,7 +115,7 @@
         android:layout_alignParentTop="true"
         android:background="@drawable/rectangle_1"
         />
-    <TextView
+    <Button
         android:id="@+id/click"
         android:layout_width="183dp"
         android:layout_height="38dp"
@@ -94,12 +124,9 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="76dp"
         android:text="ATTACK"
+        android:textStyle="bold"
         android:fontFamily="@font/hexaframecf"
-        android:textAlignment="center"
-
-        android:textColor="@android:color/white"
-        android:textSize="25dp"
-        android:background="@drawable/rectangle_3"
+        android:backgroundTint="#DE1E1E"
         />
     <TextView
         android:id="@+id/tView"
