--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_height="34dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="70dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="48dp"
             android:fontFamily="@font/hexaframecf"
             android:gravity="top"
@@ -24,11 +24,11 @@
             android:textAppearance="@style/sexybomber" />
 
         <TextView
+            android:layout_gravity="center_horizontal"
             android:layout_width="256dp"
             android:layout_height="48dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="52dp"
             android:layout_marginTop="37dp"
             android:fontFamily="@font/hexaframecf"
             android:gravity="center_horizontal|top"
@@ -38,9 +38,9 @@
             android:translationY="-3.6sp" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="256dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="54dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="40dp"
             android:orientation="horizontal">
 
@@ -60,7 +60,6 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="2dp"
                 android:fontFamily="@font/hexaframecf"
-                android:gravity="center"
                 android:lineSpacingExtra="8sp"
                 android:text="@string/mobile_numb"
                 android:textAppearance="@style/mobile_numb"
@@ -74,14 +73,14 @@
             android:layout_height="37dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="52dp"
+            android:layout_gravity="center_horizontal"
 
             android:background="@drawable/rectangle_1" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="256dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="54dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="21dp"
             android:orientation="horizontal">
 
@@ -101,7 +100,6 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:fontFamily="@font/hexaframecf"
-                android:gravity="center"
                 android:lineSpacingExtra="8sp"
                 android:text="@string/amount"
                 android:textAppearance="@style/amount"
@@ -115,7 +113,7 @@
             android:layout_height="37dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="52dp"
+            android:layout_gravity="center_horizontal"
             android:background="@drawable/rectangle_1" />
 
         <Button
@@ -124,7 +122,7 @@
             android:layout_height="38dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_marginLeft="89dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="76dp"
             android:backgroundTint="#DE1E1E"
             android:fontFamily="@font/hexaframecf"
