--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -116,16 +116,14 @@
             android:background="@drawable/rectangle_1" />
 
     <ProgressBar
-        android:id="@+id/pb"
-        android:paddingLeft="80dp"
-        android:paddingRight="80dp"
-        android:layout_marginTop="30dp"
-        android:progressBackgroundTint="@android:color/white"
-        android:progressTint="@color/purple_700"
-        android:layout_width="match_parent"
+        android:id="@+id/progressBar"
+        android:layout_gravity="center_horizontal"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        />
+        android:layout_marginTop="20dp"
+        android:indeterminateDrawable="@drawable/progress_icon"
+ />
 
         <Button
             android:id="@+id/click"
@@ -134,7 +132,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="76dp"
+            android:layout_marginTop="26dp"
             android:backgroundTint="#DE1E1E"
             android:fontFamily="@font/hexaframecf"
             android:text="ATTACK"
