--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="48dp"
+            android:layout_marginTop="8dp"
             android:fontFamily="@font/hexaframecf"
             android:gravity="top"
             android:text="@string/sexybomber"
@@ -121,18 +121,18 @@
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:indeterminateDrawable="@drawable/progress_icon"
  />
 
         <Button
             android:id="@+id/click"
             android:layout_width="183dp"
-            android:layout_height="38dp"
+            android:layout_height="48dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="6dp"
             android:backgroundTint="#DE1E1E"
             android:fontFamily="@font/hexaframecf"
             android:text="ATTACK"
@@ -144,7 +144,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="30dp"
-            android:textColor="@android:color/white"
+            android:textColor="@color/white"
+
             android:textSize="20dp"
             android:textStyle="italic" />
 
