--- a/app/src/main/res/drawable/progress_icon.xml
+++ b/app/src/main/res/drawable/progress_icon.xml
@@ -3,7 +3,7 @@
 
         <item>
             <rotate
-                android:drawable="@drawable/loading"
+                android:drawable="@drawable/loadgroup"
                 android:fillAfter="true"
                 android:fromDegrees="0"
                 android:pivotX="50%"
