--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:ignore="HardcodedText"
     android:id="@+id/my_drawer_layout"
     android:orientation="vertical"
     android:background="#250505"
@@ -178,10 +177,13 @@
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
     <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation"
         android:layout_width="200dp"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        android:id="@+id/navigation"
+        app:itemIconTint="@color/drawer"
+        app:itemTextColor="@color/drawer"
+        app:theme="@style/ThemeOverlay.AppCompat.navTheme"
         app:menu="@menu/navigation_menu" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
