--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,15 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+    <style name="ThemeOverlay.AppCompat.navTheme">
+
+        <!-- Color of text and icon when SELECTED -->
+        <item name="colorPrimary">@color/purple_700</item>
+
+        <!-- Background color when SELECTED -->
+        <item name="colorControlHighlight">#2196F3</item>
+
+    </style>
 
     <style name="Theme.SMSBomber.NoActionBar">
         <item name="windowActionBar">false</item>
