--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -11,6 +11,7 @@
     <item
         android:id="@+id/textbombid"
         android:title="TEXT BOMBER"
+        android:checked="true"
         ></item>
 
 </menu>
