--- a/app/src/main/res/color/drawer.xml
+++ b/app/src/main/res/color/drawer.xml
@@ -2,5 +2,5 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:color="#2196F3" android:state_checked="true" />
-    <item android:color="#250505" />
+    <item android:color="#FFFFFF" />
 </selector>
