--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,10 +10,22 @@
     android:background="#250505"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:gravity="center_horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <Button
+            android:id="@+id/updateBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Update Available"/>
+    </LinearLayout>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/refreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -21,7 +33,6 @@
         android:layout_gravity="center"
         android:gravity="center_vertical"
         android:orientation="vertical">
-
 
         <TextView
             android:layout_width="220dp"
