--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,7 @@
             android:id="@+id/updateBtn"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
+            android:backgroundTint="#250505"
             android:textSize="10dp"
             android:textColor="#FF9800"
             android:text="Update Available"/>
