--- a/app/src/main/res/menu/menu_2layout.xml
+++ b/app/src/main/res/menu/menu_2layout.xml
@@ -22,7 +22,8 @@
 
     <item
         android:id="@+id/usid"
-        android:title="About us"
+        android:icon="@drawable/ic_baseline_toc_24"
+        android:title="About"
         app:showAsAction="never"
         ></item>
     <item
