--- a/app/src/main/res/layout/about_us.xml
+++ b/app/src/main/res/layout/about_us.xml
@@ -1,18 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#250505"
+    android:background="#FFFFFF"
+    android:layout_gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:layout_marginTop="20dp"
+        android:layout_gravity="center"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:background="@drawable/newappicon"
+        />
     <TextView
+        android:layout_marginTop="5dp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:textSize="15dp"
+        android:fontFamily="@font/dmsans"
+        android:text="BOMBER"/>
+    <TextView
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Version 1.6"/>
+    <TextView
+        android:layout_marginTop="40dp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#1365A6"
+        android:fontFamily="@font/dmsans"
+        android:textSize="15dp"
+        android:text="This is not only a fun😍 app but also soo much important app.\nThanks for using Bomber.\nBomb💥 your friend and enjoy!"/>
 
+    <TextView
         android:id="@+id/marqueeText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="150dp"
         android:ellipsize="marquee"
         android:marqueeRepeatLimit="marquee_forever"
         android:scrollHorizontally="true"
@@ -23,5 +55,11 @@
         android:textColor="#1EE426"
         android:fontFamily="@font/hexaframecf"
         android:textSize="15sp"/>
+    <TextView
+        android:layout_marginTop="15dp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Bomber.All rights reserved.@2022-2023\nAlex                                                        Carlo"/>
 
-</RelativeLayout>
+</LinearLayout>
